# konduktor

./: .gitignore  Dockerfile.backend  Dockerfile.frontend  Dockerfile_konduktord  LICENSE  README.md  format.sh  pyproject.toml  start_dashboard.sh  startup.sh
.buildkite/: pipeline.yaml
.github/: issue_template.md  pull_request_template.md
.github/workflows/: lint.yaml  mypy.yaml  pypi-nightly-build.yaml
dashboards/: default_grafana_dashboard.json
docs/: requirements-docs.txt
docs/source/: conf.py  index.rst
docs/source/_static/js/: posthog.js
docs/source/admin/: architecture.rst  controller.rst  installation.rst  observability.rst
docs/source/cloud/: getting_started.rst
docs/source/getting-started/: installation.rst  observability.rst  quickstart.rst
docs/source/usage/: priorities.rst  quickstart.rst
files/: dcgm-metrics.csv
grafana/: LICENSE.md  default_grafana_dashboard.json  konduktor_user_gke.json  konduktor_user_nebius.json
konduktor/: __init__.py  app.py  cli.py  config.py  execution.py  kube_client.py  logging.py  resource.py  task.py  utils.py
konduktor/backend/: __init__.py  jobset.py
konduktor/backends/: __init__.py  backend.py  backend_utils.py  jobset.py
konduktor/controller/: constants.py  launch.py  node.py  parse.py
konduktor/dashboard/: README.md  docker-compose.yml
konduktor/dashboard/backend/: Dockerfile  config.py  main.py  requirements.txt  sockets.py  startup.sh
konduktor/dashboard/frontend/: Dockerfile  components.json  index.html  jsconfig.json  package-lock.json  package.json  server.js  tailwind.config.js
konduktor/dashboard/frontend/app/: globals.css  layout.js  page.js
konduktor/dashboard/frontend/app/components/: Btn.jsx  Grafana.jsx  JobsData.jsx  LogsData.jsx  MetricsData.jsx  NavMenu.jsx  NavTabs.jsx  NavTabs2.jsx  SelectBtn.jsx
konduktor/dashboard/frontend/src/: App.css  App.jsx  index.css
konduktor/data/: __init__.py  constants.py  data_utils.py  storage.py  storage_utils.py
konduktor/konduktord/: README.md  constants.py  launch.py
konduktor/konduktord/manifests/: konduktord.yaml
konduktor/manifests/: controller_deployment.yaml  dashboard_deployment.yaml  dmesg_daemonset.yaml
konduktor/templates/: jobset.yaml.j2  pod.yaml.j2
konduktor/usage/: constants.py
konduktor/utils/: accelerator_registry.py  common_utils.py  constants.py  kubernetes_enums.py  kubernetes_utils.py  log_utils.py  loki_utils.py  rich_utils.py  schemas.py  ux_utils.py  validator.py
manifests/: README.md  bitnami-thanos.values  kube-prometheus-stack.values  loki.values  manifests.yaml  otel.values  single-clusterqueue-setup.yaml  thanos-config.yaml  thanos.values
tests/: mypy_files.txt
(+21 files in other folders)
