[tool.poetry]
name = "konduktor"
version = "0.1.0"
description = ""
authors = ["Andrew Aikawa <asai@berkeley.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
colorama = "^0.4.6"
kubernetes = "^30.1.0"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
ruff = "^0.5.1"
yapf = "^0.40.2"
isort = "^5.13.2"
mypy = "^1.10.1"
pytest = "^8.2.2"
pytest-xdist = "^3.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
