[tool.poetry]
name = "konduktor"
version = "0.1.0"
description = "GPU Cluster Health Management"
packages = [
    {include = "konduktor"}
]
authors = ["Andrew Aikawa <asai@berkeley.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
colorama = "^0.4.6"
kubernetes = "^30.1.0"
click = "^8.1.7"

[tool.poetry.scripts]
konduktor = 'konduktor:cli.main'

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.1"
mypy = "^1.10.1"
pytest = "^8.2.2"
pytest-xdist = "^3.6.1"
types-colorama = "^0.4.15.20240311"
types-requests = "^2.32.0.20240622"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
# pyflakes, pycodestyle, isort
select = ["F", "E", "W", "I001"]

[tool.mypy]
python_version = "3.10"
follow_imports = "skip"
ignore_missing_imports = true
allow_redefinition = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
